<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_left"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_Primary"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/profilelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/profileimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_boader_off" />

        <TextView
            android:id="@+id/profiletextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:text="@string/menuprofile"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/homelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/homeimageview"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:src="@drawable/home_btn_off" />

        <TextView
            android:id="@+id/hometectview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/menuhome"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/messageimage"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:layout_gravity="left"
            android:src="@drawable/message_btn_off" />

        <TextView
            android:id="@+id/massagetextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/menumessage"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settinglayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/settingimage"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:src="@drawable/setting_icon_off" />

        <TextView
            android:id="@+id/settingtextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/menusetting"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/questionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/questionImage"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:src="@drawable/question_icon_off" />

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/menuquestion"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/invitelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/inviteimage"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:src="@drawable/invite_icon_off" />

        <TextView
            android:id="@+id/invitetextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/menuinvite"
            android:textColor="@color/white" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/logoutLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/logoutimage"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:src="@drawable/logout" />

        <TextView
            android:id="@+id/logouttextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/menulogout"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>