<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/llLoginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <com.epbitservices.unme.ExtendedGallery
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"     
            android:spacing="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/facebook_background"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/image_count_homescreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:orientation="horizontal" >
            </LinearLayout>

            <Button
                android:id="@+id/btnLoginFaceBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/facebook_btn"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/login"
                android:textColor="@color/white"
                android:paddingLeft="30dp"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/txtLoginPrivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/privacy_policy" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/privacylayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:background="@drawable/privacybg"
        android:orientation="vertical"
        android:visibility="gone" >

        <Button
            android:id="@+id/loginwithfacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/facebook_btn"
            android:text="@string/sign_facebook"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/wetakeyourprivacy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/privacy_seriously"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/textviewfirst"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
           
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textviewthird"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/dont_know"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textviewfourth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="Other users cannot contact you \nunless you have already been matched"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textviewfifth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/loc_not_show"
            android:textSize="18dp" />
    </LinearLayout>

</LinearLayout>